--- a/src/app/components/product-add/product-add.component.html
+++ b/src/app/components/product-add/product-add.component.html
@@ -2,22 +2,22 @@
 
 <div class="container">
   <h2>Crear productos</h2>
-<form>
+<form [formGroup] ="formGroup">
 
   <div class="mb-3">
     <label for="Elaborado a Mano" class="form-label">Elaboradoa Mano</label>
-    <input [(ngModel)]="elaboradoMano" type="text" class="form-control" id="elaboradoMano" name="elaboradoMano" pattern="[a-zA-Z]+">
+    <input formControlName="elaboradoMano" type="text" class="form-control" id="elaboradoMano" name="elaboradoMano" required>
   </div>
   <div class="mb-3">
     <label for="Elaborado a Maquina" class="form-label">Elaborado a Maquina</label>
-    <input  [(ngModel)]="maquina" type="text" class="form-control" id="maquina"  name="maquina">
+    <input  formControlName="maquina" type="text" class="form-control" id="maquina"  name="maquina">
   </div>
     <div class="mb-3">
       <label for="Status" class="form-label">Status</label>
-      <input  [(ngModel)]="status" type="text" class="form-control" id="status" name="status">
+      <input  formControlName="status" type="text" class="form-control" id="status" name="status">
     </div>
     <div class="mb-3">
-      <input type="date" [(ngModel)]="dateCreation">
+      <input type="date" formControlName="dateCreation">
     </div>
 
 
