--- a/src/app/components/product-add/product-add.component.html
+++ b/src/app/components/product-add/product-add.component.html
@@ -5,22 +5,22 @@
 <form [formGroup] ="formGroup">
 
   <div class="mb-3">
-    <label for="Elaborado a Mano" class="form-label">Elaboradoa Mano</label>
-    <input formControlName="elaboradoMano" type="text" class="form-control" id="elaboradoMano" name="elaboradoMano" required>
+    <label for="Elaborado a Mano" class="form-label">Elaboradoa Mano *</label>
+    <input formControlName="elaboradoMano" type="text" class="form-control" id="elaboradoMano" name="elaboradoMano" r>
   </div>
   <div class="mb-3">
-    <label for="Elaborado a Maquina" class="form-label">Elaborado a Maquina</label>
+    <label for="Elaborado a Maquina" class="form-label">Elaborado a Maquina *</label>
     <input  formControlName="maquina" type="text" class="form-control" id="maquina"  name="maquina">
   </div>
     <div class="mb-3">
-      <label for="Status" class="form-label">Status</label>
+      <label for="Status" class="form-label">Status *</label>
       <input  formControlName="status" type="text" class="form-control" id="status" name="status">
     </div>
     <div class="mb-3">
-      <input type="date" formControlName="dateCreation">
+      <label for="Status" class="form-label">Fecha *</label>
+      <input type="date" formControlName="dateCreation" id="dateCreation" name="dateCreation">
     </div>
-
-
+    
     <button type="submit" class="btn btn-primary" (click) = "addProduct()">Crear</button>
   </form>
 
